// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card with Header 1`] = `
<div
  className="sc-bdVaJa cmzcms"
/>
`;

exports[`With Image 1`] = `
<img
  className="sc-ifAKCX iSwMuJ"
/>
`;

exports[`create card 1`] = `
<div
  className="sc-bxivhb bLohfb"
/>
`;
